# notebooks-school

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_build  docker-compose-nomount.yml  docker-compose.yml  environment.yml  install.sh  requirements.txt
.github/workflows/: docker-image.yml
docs/: _config.yml
docs/_includes/: about.html  nav.html
docs/_includes/css/: main.css
docs/_layouts/: default.html
docs/_posts/: 2023-03-07-370.markdown
notebooks/: RESET.ipynb
notebooks/Informatik/: bausteine.ipynb  c0.ipynb  c1.ipynb  c2.ipynb  c3.ipynb  c4.ipynb  c5.ipynb  k1.ipynb  k2.ipynb  k3.ipynb  p0.ipynb  p1.ipynb  p2.ipynb  p3.ipynb  p4.ipynb  p5.ipynb  p6.ipynb  p7.ipynb
notebooks/Informatik/modules/: turtleinit.py
notebooks/Mathe/: m0.ipynb
notebooks/Physik/: Physik.ipynb  einsetzen.ipynb
notebooks/Sonstiges/Graphen/: plot.ipynb
notebooks/Sonstiges/Graphen/modules/: figures.py
notebooks/Sonstiges/Noten/: Noten.ipynb  Noten_Excel.ipynb  meine_notenliste.xlsx
notebooks/Sonstiges/Soziogramm/: namen.csv  namen.xlsx  soziogramm.ipynb
notebooks/modules/: INSTALL.ipynb  pyproject.toml
notebooks/modules/infomodules/: __init__.py  crypt.py  interactive.py  ph.py  pixelimage.py  social.py  sprache.py  turtleinit.py
scripts/: docker-entrypoint.sh  run_on_init  update_notebooks
