[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infomodules"
version = "0.0.1"
authors = [
  { name="L.M.H.", email="dev@hilberg.eu" },
]
description = "Bundeling modules that helps performing task in school."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tna76874/notebooks-school"